--- a/admissions.html
+++ b/admissions.html
@@ -32,18 +32,21 @@
     </ul>
 
     <h3>Online Application Form</h3>
-    <form class="apply-form" onsubmit="event.preventDefault(); alert('Your form has been submitted successfully!');">
-      <label for="name">Full Name</label>
-      <input type="text" id="name" name="name" placeholder="Enter your full name" required>
+    <form action="https://formspree.io/f/mdkpnpjg" method="POST">
+  <label>Your Name:</label><br>
+  <input type="text" name="name" required><br><br>
 
-      <label for="phone">Phone Number</label>
-      <input type="tel" id="phone" name="phone" placeholder="Enter your phone number" required>
+  <label>Mobile Number:</label><br>
+  <input type="mobile" name="mobile" required><br><br>
 
-      <label for="place">Place</label>
-      <input type="text" id="place" name="place" placeholder="Enter your city or town" required>
+  <label>Your Email:</label><br>
+  <input type="email" name="email" required><br><br>
 
-      <button type="submit" class="btn">Submit Application</button>
-    </form>
+  <label>Your Message:</label><br>
+  <textarea name="message" rows="4" optinal></textarea><br><br>
+
+  <button type="submit">Send</button>
+</form>
   </section>
 
   <footer>
@@ -51,3 +54,4 @@
   </footer>
 </body>
 </html>
+
