--- a/contact.html
+++ b/contact.html
@@ -24,6 +24,7 @@
     <h2>Contact Us</h2>
     <p>If you have any questions or need assistance, feel free to reach out.</p>
     <ul>
+      <li><strong>Pricipal Name</strong> Vemula Kiran</li>
       <li><strong>Email:</strong> sadhanacollegestb@gmail.com</li>
       <li><strong>Phone:</strong> +91-9866636104</li>
       <li><strong>Address:</strong> Sadhana Degree College, [Sulthanabad], [Telangana]</li>
@@ -36,3 +37,4 @@
   </footer>
 </body>
 </html>
+
