--- a/admissions.html
+++ b/admissions.html
@@ -275,6 +275,48 @@
     });
 
   </script>
+    <form action="https://formspree.io/f/mvgeqobg" method="POST" enctype="multipart/form-data">
+
+<label>Your Name:</label><br>
+<input type="text" name="name" required><br><br>
+
+<label>Mobile Number:</label><br>
+<input type="mobile" name="mobile" required><br><br>
+
+<label>Your Email:</label><br>
+<input type="email" name="email" required><br><br>
+
+<label>Your Message:</label><br>
+<textarea name="message" rows="4" optional></textarea><br><br>
+
+<!-- ---------------------- -->
+<!--   📌 FILE UPLOADS HERE -->
+<!-- ---------------------- -->
+
+<label>10th Memo:</label><br>
+<input type="file" name="memo10" accept=".jpg,.jpeg,.png,.pdf"><br><br>
+
+<label>Intermediate Memo:</label><br>
+<input type="file" name="memo12" accept=".jpg,.jpeg,.png,.pdf"><br><br>
+
+<label>Study Certificate(s):</label><br>
+<input type="file" name="studycert" accept=".jpg,.jpeg,.png,.pdf" multiple><br><br>
+
+<label>Aadhar Card:</label><br>
+<input type="file" name="aadhar" accept=".jpg,.jpeg,.png,.pdf"><br><br>
+
+<label>Caste Certificate:</label><br>
+<input type="file" name="caste" accept=".jpg,.jpeg,.png,.pdf"><br><br>
+
+<label>Income Certificate:</label><br>
+<input type="file" name="income" accept=".jpg,.jpeg,.png,.pdf"><br><br>
+
+<!-- ---------------------- -->
+
+<button type="submit">Send</button>
+
+</form>
+
     <form action="https://formspree.io/f/mdkpnpjg" method="POST">
   <label>Your Name:</label><br>
   <input type="text" name="name" required><br><br>
@@ -297,5 +339,6 @@
   </footer>
 </body>
 </html>
+
 
 
